# peakmem

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  fix-git-timestamps.sh  peakmem.c  todo.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: README-PeakMem  todo.txt
man/: Makefile.am  Makefile.in  peakmem.1
plot/: output.plot
src/: Makefile.am  Makefile.in  keys.h  peakmem.c  peakmem.h  term.c  term.h
